--- a/package.json
+++ b/package.json
@@ -4,40 +4,42 @@
   "description": "Vela UI",
   "author": "Vela Team",
   "engines": {
-    "node": ">=12.14.1"
+    "node": ">=14.16.0"
   },
   "dependencies": {
-    "@fullhuman/postcss-purgecss": "3.1.3",
+    "@fullhuman/postcss-purgecss": "4.0.2",
     "@types/clipboard": "2.0.1",
     "@types/parcel-env": "0.0.0",
-    "autoprefixer": "9.8.6",
-    "clipboard": "2.0.6",
-    "elm": "0.19.1-4",
+    "autoprefixer": "10.2.5",
+    "clipboard": "2.0.8",
+    "elm": "0.19.1-5",
     "node-elm-compiler": "5.0.5",
-    "parcel-bundler": "1.12.4",
-    "parcel-plugin-static-files-copy": "2.5.0",
+    "parcel-plugin-static-files-copy": "2.5.1",
     "rimraf": "3.0.2",
-    "sass": "1.32.5",
-    "typescript": "4.1.3"
+    "sass": "1.32.8",
+    "typescript": "4.2.3"
   },
   "devDependencies": {
-    "axe-core": "4.1.1",
+    "@parcel/transformer-elm": "^2.0.0-nightly.2249",
+    "@parcel/transformer-sass": "^2.0.0-nightly.627",
+    "axe-core": "4.1.3",
     "cypress": "5.6.0",
-    "cypress-axe": "0.12.0",
+    "cypress-axe": "0.12.2",
     "elm-hot": "1.1.6",
+    "parcel": "^2.0.0-nightly.625",
     "prettier": "2.2.1",
-    "start-server-and-test": "1.11.7",
-    "stylelint": "13.9.0",
+    "start-server-and-test": "1.12.0",
+    "stylelint": "13.12.0",
     "stylelint-a11y": "1.2.3",
     "stylelint-color-format": "1.1.0",
     "stylelint-config-prettier": "8.0.2",
     "stylelint-config-rational-order": "0.1.2",
     "stylelint-config-recommended-scss": "4.2.0",
     "stylelint-declaration-block-no-ignored-properties": "2.3.0",
-    "stylelint-declaration-strict-value": "1.7.7",
+    "stylelint-declaration-strict-value": "1.7.9",
     "stylelint-high-performance-animation": "1.5.2",
     "stylelint-order": "4.1.0",
-    "stylelint-scss": "3.18.0"
+    "stylelint-scss": "3.19.0"
   },
   "scripts": {
     "predev": "npm run clean",
@@ -46,16 +48,16 @@
     "start": "parcel src/static/index.html --port 8888",
     "build-img": "parcel build src/static/img/*",
     "prebuild": "npm run clean",
-    "build": "parcel build src/static/index.html --no-minify",
+    "build": "parcel build src/static/index.html --no-optimize",
     "prebuild-prod": "npm run clean",
-    "build-prod": "parcel build src/static/index.html --no-cache --detailed-report --experimental-scope-hoisting",
+    "build-prod": "parcel build src/static/index.html --no-cache --detailed-report",
     "test": "elm-test --compiler ./node_modules/.bin/elm",
     "test:watch": "elm-test --compiler ./node_modules/.bin/elm --watch",
     "test:cy": "start-test 8888 cypress",
     "test:cy-open": "start-test 8888 cypress:open",
     "cypress": "cypress run",
     "cypress:open": "cypress open",
-    "clean": "rimraf ./.cache ./dist",
+    "clean": "rimraf ./.parcel-cache ./.cache ./dist",
     "lint:prettier": "prettier --check '**/*.{js,json,ts,yml,scss,html}'",
     "lint:prettier-fix": "npm run lint:prettier -- --write",
     "lint:css": "stylelint --cache --cache-location 'node_modules/' 'src/scss/**/*.scss'",
