--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,8 @@ on:
   pull_request:
 
 env:
-  USE_NODE_VER: '14.16.0'
+  NODE_VERSION: '14.16.0'
+  ELM_VERSION: '0.19.1-5'
   ELM_HOME: '${GITHUB_WORKSPACE}'
   CI: 1
 
@@ -47,10 +48,12 @@ jobs:
             cypress-${{ runner.os }}-bin-
       - uses: actions/setup-node@v2
         with:
-          node-version: ${{ env.USE_NODE_VER }}
+          node-version: ${{ env.NODE_VERSION }}
 
       - name: install dependencies
         run: npm ci --prefer-offline --no-audit
+      - name: install elm
+        run: npm i elm@${{ env.ELM_VERSION }}
       - name: install elm-format
         run: npm i elm-format@0.8.5
       - name: run elm-format
@@ -85,10 +88,12 @@ jobs:
             cypress-${{ runner.os }}-bin-
       - uses: actions/setup-node@v2
         with:
-          node-version: ${{ env.USE_NODE_VER }}
+          node-version: ${{ env.NODE_VERSION }}
 
       - name: install dependencies
         run: npm ci --prefer-offline --no-audit
+      - name: install elm
+        run: npm i elm@${{ env.ELM_VERSION }}
       - name: install elm-test
         run: npm i elm-test@0.19.1-revision6
       - name: run elm-test
@@ -123,7 +128,7 @@ jobs:
             cypress-${{ runner.os }}-bin-
       - uses: actions/setup-node@v2
         with:
-          node-version: ${{ env.USE_NODE_VER }}
+          node-version: ${{ env.NODE_VERSION }}
 
       - name: install dependencies
         run: npm ci --prefer-offline --no-audit
@@ -162,7 +167,7 @@ jobs:
             cypress-${{ runner.os }}-bin-
       - uses: actions/setup-node@v2
         with:
-          node-version: ${{ env.USE_NODE_VER }}
+          node-version: ${{ env.NODE_VERSION }}
 
       - name: install dependencies
         run: npm ci --prefer-offline --no-audit
@@ -194,7 +199,7 @@ jobs:
             ${{ runner.os }}-modules-
       - uses: actions/setup-node@v2
         with:
-          node-version: ${{ env.USE_NODE_VER }}
+          node-version: ${{ env.NODE_VERSION }}
 
       # ┌┐ ┬ ┬┬┬  ┌┬┐
       # ├┴┐│ │││   ││
