--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,7 +12,7 @@ on:
       - 'v*'
 
 env:
-  USE_NODE_VER: '14.16.0'
+  NODE_VERSION: '14.16.0'
 
 # pipeline to execute
 jobs:
@@ -36,7 +36,7 @@ jobs:
             ${{ runner.os }}-modules-
       - uses: actions/setup-node@v2
         with:
-          node-version: ${{ env.USE_NODE_VER }}
+          node-version: ${{ env.NODE_VERSION }}
 
       # ┌┐ ┬ ┬┬┬  ┌┬┐
       # ├┴┐│ │││   ││
