enhance: add queue restart limit to admin settings and route to build tooltip (#858)

--- a/cypress/fixtures/settings_updated.json
+++ b/cypress/fixtures/settings_updated.json
@@ -10,6 +10,7 @@
   },
   "repo_allowlist": ["octocat/hello-world"],
   "schedule_allowlist": [],
+  "queue_restart_limit": 60,
   "created_at": 1572980375,
   "updated_at": 1572980675,
   "updated_by": "octocat"
