--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,9 @@ on:
   push:
   pull_request:
 
+permissions:
+  contents: read
+
 env:
   CI: 1
 
@@ -19,6 +22,9 @@ jobs:
   elm-format:
     name: validate elm files
     runs-on: ubuntu-latest
+
+    permissions:
+      actions: write # for actions/cache to write to cache location
 
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
@@ -42,7 +48,7 @@ jobs:
             cypress-${{ runner.os }}-bin-v2-
       - uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020 # v4.4.0
         with:
-          node-version-file: '.nvmrc'
+          node-version-file: ".nvmrc"
 
       - name: install dependencies
         run: npm ci --prefer-offline --no-audit
@@ -58,6 +64,9 @@ jobs:
     name: run elm tests
     runs-on: ubuntu-latest
 
+    permissions:
+      actions: write # for actions/cache to write to cache location
+
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
       - uses: actions/cache@5a3ec84eff668545956fd18022155c47e93e2684 # v4.2.3
@@ -86,7 +95,7 @@ jobs:
             cypress-${{ runner.os }}-bin-v2-
       - uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020 # v4.4.0
         with:
-          node-version-file: '.nvmrc'
+          node-version-file: ".nvmrc"
 
       - name: install dependencies
         run: npm ci --prefer-offline --no-audit
@@ -102,6 +111,9 @@ jobs:
     name: lint
     runs-on: ubuntu-latest
 
+    permissions:
+      actions: write # for actions/cache to write to cache location
+
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
       - uses: actions/cache@5a3ec84eff668545956fd18022155c47e93e2684 # v4.2.3
@@ -124,7 +136,7 @@ jobs:
             cypress-${{ runner.os }}-bin-v2-
       - uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020 # v4.4.0
         with:
-          node-version-file: '.nvmrc'
+          node-version-file: ".nvmrc"
 
       - name: install dependencies
         run: npm ci --prefer-offline --no-audit
@@ -138,8 +150,11 @@ jobs:
     name: run cypress tests
     runs-on: ubuntu-latest
     env:
-      VELA_API: 'http://localhost:8080'
+      VELA_API: "http://localhost:8080"
       TERM: xterm
+
+    permissions:
+      actions: write # for actions/cache to write to cache location
 
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
@@ -169,7 +184,7 @@ jobs:
             cypress-${{ runner.os }}-bin-v2-
       - uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020 # v4.4.0
         with:
-          node-version-file: '.nvmrc'
+          node-version-file: ".nvmrc"
 
       - name: install dependencies
         run: npm ci --prefer-offline --no-audit
@@ -185,6 +200,9 @@ jobs:
     if: github.event_name == 'push' && github.ref == 'refs/heads/main' && github.repository == 'go-vela/ui'
     needs: [lint, elm-format, elm-test, integration]
 
+    permissions:
+      actions: write # for actions/cache to write to cache location
+
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
       - uses: actions/cache@5a3ec84eff668545956fd18022155c47e93e2684 # v4.2.3
@@ -207,7 +225,7 @@ jobs:
             ${{ runner.os }}-modules-v2-
       - uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020 # v4.4.0
         with:
-          node-version-file: '.nvmrc'
+          node-version-file: ".nvmrc"
 
       # ┌┐ ┬ ┬┬┬  ┌┬┐
       # ├┴┐│ │││   ││
@@ -220,10 +238,27 @@ jobs:
       # ┌┬┐┌─┐┌─┐┬┌─┌─┐┬─┐
       #  │││ ││  ├┴┐├┤ ├┬┘
       # ─┴┘└─┘└─┘┴ ┴└─┘┴└─
-      - name: push to docker
-        uses: elgohr/Publish-Docker-Github-Action@4feac4d53e4e55dcc5d3e2ad0ed2e0a76028ff7a # v5
+      - name: login to dockerhub
+        uses: docker/login-action@74a5d142397b4f367a81961eba4e8cd7edddf772 # v3.4.0
         with:
-          name: target/vela-ui
-          cache: true
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: extract metadata
+        id: meta
+        uses: docker/metadata-action@902fa8ec7d6ecbf8d84d538b9b233a880e428804 # v5.7.0
+        with:
+          images: target/vela-ui
+          tags: |
+            # latest
+            type=raw,value=latest,enable={{is_default_branch}}
+
+      - name: build and push image
+        id: push
+        uses: docker/build-push-action@263435318d21b8e681c14492fe198d362a7d2c83 # v6.18.0
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
