fix(renovate): add proper regex delimiter
noticed that the elm.json file (or the regex matcher) wasn't picked up
on the dependency dashboard and used the renovate CLI to validate that i
needed to surround the regex with "/" for it to get picked up properly.

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -4,7 +4,7 @@
   "customManagers": [
     {
       "customType": "regex",
-      "managerFilePatterns": ["(^|/|\\.)elm\\.json$"],
+      "managerFilePatterns": ["/(^|/|\\.)elm\\.json$/"],
       "matchStrings": ["\"elm-version\"\\s*:\\s*\"(?<currentValue>.*)\""],
       "depNameTemplate": "elm/compiler",
       "datasourceTemplate": "github-tags",
@@ -12,7 +12,7 @@
     },
     {
       "customType": "regex",
-      "managerFilePatterns": ["(^|/|\\.)elm\\.json$"],
+      "managerFilePatterns": ["/(^|/|\\.)elm\\.json$/"],
       "matchStrings": [
         "\"(?<depName>.*/.*?)\"\\s*:\\s*\"(?<currentValue>.*)\""
       ],
